<resources>
    <string name="app_name">COVID19NEWS</string>
    <string name="main_navigation_username">user20200905</string>

    <string name="main_navigation_menu_Home">Home</string>
    <string name="main_navigation_menu_History">History</string>
    <string name="main_navigation_menu_ChinaDataMap">ChinaDataMap</string>
    <string name="main_navigation_menu_GlobalDataMap">GlobalDataMap</string>
    <string name="main_navigation_menu_GraphSchema">GraphSchema</string>
    <string name="main_navigation_menu_Cluster">Cluster</string>
    <string name="main_navigation_menu_Scholar">Scholar</string>
    <string name="main_navigation_menu_About">About</string>

    <string name="loading">loading</string>
    <string name="empty">empty</string>
    <string name="RefreshAgain">Refresh Again</string>
    <string name="History">History</string>

    <string name="main_navigation_drawer_open">Open</string>
    <string name="main_navigation_drawer_close">Close</string>

    <string name="clearAll">clearAll</string>
    <string name="Edit">Edit</string>

    <string name="about_fragment_title">About</string>
    <string name="about_fragment_author_front">Lu Mengying : Front End</string>
    <string name="about_fragment_author_after">Zhu Tianyao : After End</string>

    <string name="more">More</string>

    <string name="search_history">History</string>

    <string name="category">Category</string>
    <string name="category_current">Current</string>
    <string name="category_current_hint">Clike to enter</string>
    <string name="category_remain">Remain</string>
    <string name="category_remain_hint">Clike to add</string>

    <string name="default_news_title">It is title</string>
    <string name="default_news_publisher">publisher here</string>
    <string name="default_news_time">time here</string>
    <string name="default_content">it is cotent about news</string>


    <string name="time_error">Time Error!</string>
    <string name="time_recent">just now</string>
    <string name="time_minute">%d minutes ago</string>
    <string name="time_hour">%d hours ago</string>
    <string name="time_last_day">yesterday</string>
    <string name="time_last_last_day">the day before yesterday</string>
    <string name="time_day">%d days ago</string>
    <string name="time_week">%d weeks ago</string>
    <string name="time_month">%d months ago</string>
    <string name="time_year">%d years ago</string>

    <string name="search">search</string>
    <string name="share">share</string>

</resources>