<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="start"
            android:text="@string/default_news_title"
            android:textColor="@color/colorTitle"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:gravity="bottom">

            <TextView
                android:id="@+id/publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/default_news_publisher"
                android:textColor="@color/colorSubtitle"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/publish_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="30dp"
                android:paddingEnd="0dp"
                android:text="@string/default_news_time"
                android:textColor="@color/colorSubtitle"
                android:textSize="14sp"
                android:paddingLeft="18dp"
                android:paddingRight="0dp" />

        </LinearLayout>



        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/default_content"
            android:textColor="@color/colorText"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>
