<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/about_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/about_fragment_title"
                android:textColor="#ffffff"
                style="@style/Base.DialogWindowTitle.AppCompat"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="80dp">

        <TextView
            android:id="@+id/about_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/about_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/icon"/>


        <TextView
            android:id="@+id/about_author1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingVertical="10dp"
            android:text="@string/about_fragment_author_front"
            android:textColor="@color/cardview_dark_background"/>

        <TextView
            android:id="@+id/about_author2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/about_fragment_author_after"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
