<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/news_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true"
    android:clickable="true"
    android:paddingHorizontal="16dp"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:text="@string/default_news_title"
        android:textColor="@color/colorTitle"
        android:textSize="16sp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_marginVertical="12dp">

        <TextView
            android:id="@+id/publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/default_news_publisher"
            android:textColor="@color/colorSubtitle"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/publish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:text="@string/default_news_time"
            android:textColor="@color/colorSubtitle"
            android:textSize="12sp"
            android:paddingLeft="18dp"
            android:paddingRight="0dp" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:background="@color/colorSubtitle"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"/>

</LinearLayout>
